--- a/lab_6/style.css
+++ b/lab_6/style.css
@@ -1,45 +1,37 @@
 .cell {
-    width: 50px;
-    height: 50px;
-    background-color: #eee;
-    border: 1px solid #ccc;
-    display: inline-block;
-  }
-  
-  .cell.on {
-    background-color: #333;
-  }
-  
-  .row {
-    clear: both;
-  }
-  
-  #game-container {
-    margin-bottom: 20px;
-  }
-  
-  #restart-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  #newgame-button {
-    background-color: #af954c;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  #restart-button:hover {
-    background-color: #45a049;
-  }
-  
+  width: 50px;
+  height: 50px;
+  background-color: #eee;
+  border: 1px solid #ccc;
+  display: inline-block;
+  box-sizing: border-box;
+}
+
+.cell.on {
+  background-color: #333;
+}
+
+.row {
+  clear: both;
+}
+
+#game-container {
+  margin-bottom: 20px;
+}
+
+#restart-button, #newgame-button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  margin: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+#newgame-button {
+  background-color: #af954c;
+}
+
+#restart-button:hover {
+  background-color: #45a049;
+}
